Fixed visibility issues on Chromium auto dark mode

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -83,6 +83,12 @@ $easeOutThree: cubic-bezier(0.215, 0.61, 0.355, 1);
 	}
 }
 
+#interface,
+input[type='range'],
+input[type='checkbox'] {
+	color-scheme: only light;
+}
+
 ::-webkit-scrollbar {
 	width: 10px;
 }
