--- a/src/styles/features/searchbar.scss
+++ b/src/styles/features/searchbar.scss
@@ -139,7 +139,7 @@
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 	border: 1px solid rgba(255, 255, 255, 0.075);
 	background-color: rgba(255, 255, 255, var(--searchbar-background-alpha));
-	z-index: 2;
+	z-index: 4;
 
 	&.shown {
 		display: block;
